--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -362,7 +362,7 @@
             "wrist_overlay": {
                 "steamvr_wrist_overlay": {
                     "header": "SteamVR 手首オーバーレイ",
-                    "description": "* Runs automatically while VRChat is running.",
+                    "description": "VRChatが起動しているときに自動的に動作します。",
                     "grip": "グリップ: Viveコントローラー等での「グラブ」、Oculusコントローラーでの「X/Aボタン」",
                     "menu": "メニュー: Viveコントローラーでの「メニューボタン」、Indexコントローラーでの「Bボタン」、Oculusコントローラーでの「Y/Bボタン」",
                     "steamvr_overlay": "SteamVR オーバーレイ",
@@ -375,12 +375,12 @@
                     "display_overlay_on": "オーバーレイを表示する手",
                     "display_overlay_on_left": "左手",
                     "display_overlay_on_right": "右手",
-                    "display_overlay_on_both": "Both Hands",
-                    "grey_background": "Grey Background",
+                    "display_overlay_on_both": "両手",
+                    "grey_background": "暗い背景",
                     "minimal_feed_icons": "小さいフィードアイコン",
-                    "show_vr_devices": "Show VR Devices",
+                    "show_vr_devices": "VRデバイスを表示する",
                     "show_cpu_usage": "CPU使用率を表示する",
-                    "show_game_uptime": "Show Game Uptime",
+                    "show_game_uptime": "ゲームの起動時間を表示する",
                     "show_pc_uptime": "PCの起動時間を表示する",
                     "wrist_feed_filters": "手首フィードフィルター"
                 }
@@ -388,13 +388,13 @@
             "discord_presence": {
                 "discord_presence": {
                     "header": "Discordでのゲームステータス表示",
-                    "description": "* Only active while VRChat is running.",
+                    "description": "VRChatが起動しているときのみ動作します。",
                     "enable": "有効化",
                     "enable_tooltip": "競合を防ぐため、VRChatのconfig.jsonでDiscord Rich Presenceを無効化することを推奨します。",
                     "instance_type_player_count": "インスタンス詳細/プレイヤー数",
                     "join_button": "Joinボタンを表示 (パブリックのみ)",
-                    "show_details_in_private": "Show world details in private",
-                    "show_images": "Show world images"
+                    "show_details_in_private": "Privateでもワールド詳細を表示",
+                    "show_images": "ワールド画像を表示"
                 }
             },
             "advanced": {
@@ -415,10 +415,6 @@
                     "vrchat_quit_fix": {
                         "header": "VRChat終了時の挙動を修正する",
                         "description": "ゲーム終了時、VRChatのプロセスを強制終了"
-                    },
-                    "vrchat_osc_fix": {
-                        "header": "VRChatのOSCの挙動を修正する",
-                        "description": "ゲーム終了時、インストールプロセスを強制終了"
                     },
                     "auto_cache_management": {
                         "header": "VRChat終了時にキャッシュを自動で管理する",
@@ -582,6 +578,8 @@
                 "moderation_show_avatar": "アバターを表示",
                 "moderation_enable_avatar_interaction": "アバターインタラクションを有効化",
                 "moderation_disable_avatar_interaction": "アバターインタラクションを無効化",
+                "moderation_enable_chatbox": "チャットボックスをミュート解除",
+                "moderation_disable_chatbox": "チャットボックスをミュート",
                 "edit_status": "ソーシャルステータスを変更",
                 "edit_language": "言語を変更",
                 "edit_bio": "自己紹介を変更",
@@ -681,6 +679,8 @@
                 "public": "パブリック",
                 "private": "プライベート",
                 "avatar_scaling_disabled": "アバタースケーリング 使用不可",
+                "focus_view_disabled": "フォーカスビュー 使用不可",
+                "stickers_disabled": "ステッカー 使用不可",
                 "future_proofing": "Future Proofing",
                 "labs": "ラボ",
                 "cache": "キャッシュ",
@@ -709,6 +709,7 @@
                 "download_package": "Unity Packageをダウンロード",
                 "publish_to_labs": "ラボに公開",
                 "unpublish": "非公開化",
+                "delete_persistent_data": "Persistent データを削除する",
                 "delete": "削除"
             },
             "instances": {
@@ -1031,6 +1032,8 @@
         "set_world_tags": {
             "header": "ワールドのタグを設定",
             "avatar_scaling_disabled": "アバタースケーリングを無効化",
+            "focus_view_disabled": "フォーカスビューを無効化",
+            "stickers_disabled": "ステッカーを無効化",
             "enable_debugging": "ワールドデバッグを他のユーザー向けに有効化",
             "author_tags": "タグ (コンマ区切り)",
             "content_tags": "コンテンツ タグ (コンマ区切り)",
@@ -1244,6 +1247,7 @@
             "gallery": "ギャラリー",
             "icons": "アイコン",
             "emojis": "絵文字",
+            "stickers": "ステッカー",
             "refresh": "更新",
             "upload": "アップロード",
             "clear": "消去",
